--- a/sample.tex
+++ b/sample.tex
@@ -4,7 +4,6 @@
 
 \documentclass[aspectratio=169,xcolor=dvipsnames]{beamer}
 \usetheme{SimpleDarkBlue}
-
 \usepackage{hyperref}
 \usepackage{graphicx} % Allows including images
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
@@ -33,21 +32,128 @@
     \tableofcontents
 \end{frame}
 
-% First Teammate
-\section{Background}
+% % First Teammate
+% \section{Background}
 
-% Second Teammate
-\section{Technology}
+% % Second Teammate
+% \section{Technology}
 
-% Third Teammate
-\section{Applications}
+% % Third Teammate
+% \section{Applications}
 
-% Fourth Teammate
-\section{Evaluation}
+% % Fourth Teammate
+% \section{Evaluation}
 
-% Fifth Teammate
-\section{Challenges}
+% % Fifth Teammate
+% \section{Challenges}
+% \begin{frame}{Challenges}
+    
+% \end{frame}
 
+
+\begin{frame}
+\frametitle{Ethical Challenges & Future Directions}
+\begin{itemize}
+    \item \textbf{VR as the “Ultimate Empathy Machine”:}
+    \begin{itemize}
+        \item Virtual Reality (VR) has been promoted as a tool to foster empathy, especially for social and humanitarian causes (e.g., refugee crises, racial issues).
+        \item Industry claims that VR enhances empathy more effectively than traditional media by providing immersive, embodied experiences.
+    \end{itemize}
+    \item \textbf{Critical Review:}
+    \begin{itemize}
+        \item This paper critiques the "VR-empathy" model, arguing that there is insufficient evidence to support VR's universal ability to enhance empathy in the long term.
+    \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{The VR-Empathy Model and Its Issues}
+\begin{itemize}
+    \item \textbf{Claim of Empathy through Immersion:}
+    \begin{itemize}
+          \item VR aims to elicit empathy by allowing users to experience another person’s life firsthand (e.g., VR films like \textit{Clouds Over Sidra}). For more details, visit the following link: \href{https://v.qq.com/x/page/d03194nt7hs.html}{Click here to watch}.
+
+        \item Proponents claim that VR fosters pro-social behavior by connecting people emotionally with others' experiences.
+    \end{itemize}
+    \item \textbf{Empirical Challenges:}
+    \begin{itemize}
+        \item \textbf{Lack of Evidence:} Studies show mixed results; no substantial proof that VR leads to long-term empathy or motivates pro-social behavior.
+        \item \textbf{Bias and Short-Term Effects:} Responses are often influenced by personal biases (e.g., race, gender) and may be short-lived.
+    \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Key Findings from Empirical Studies}
+\begin{itemize}
+    \item \textbf{Lack of Long-Term Effects:}
+    \begin{itemize}
+        \item \textbf{Studies:} Few long-term studies on the impact of VR on empathy, with most studies showing only short-term changes in attitudes.
+        \item \textbf{Comparison to Other Media:} Other media (cinema, literature) may be just as effective in fostering empathy.
+    \end{itemize}
+    \item \textbf{Cultural and Personal Biases:}
+    \begin{itemize}
+        \item \textbf{Impact of Identity:} Participants’ empathy is influenced by their own social identity and biases, which can distort the effectiveness of VR empathy experiences.
+        \item \textbf{Empathy for Similar Groups:} People often feel more empathy for individuals they perceive as similar to themselves (e.g., same race, gender).
+    \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ethical Considerations in VR Empathy}
+\begin{itemize}
+    \item \textbf{Mediated Empathy and Ethical Concerns:}
+    \begin{itemize}
+        \item VR experiences may induce “empathetic stress,” causing emotional fatigue or discomfort, particularly in vulnerable groups.
+        \item \textbf{Risk of Exploitation:} The voyeuristic nature of some VR experiences may objectify those portrayed, creating a false sense of empathy or detachment.
+    \end{itemize}
+    \item \textbf{Need for Ethical Guidelines:}
+    \begin{itemize}
+        \item Ethical concerns include audience safety, emotional well-being, and ensuring that VR content is responsibly designed, especially when dealing with sensitive topics.
+    \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Future Research Directions}
+\begin{itemize}
+    \item \textbf{Need for Rigorous Research:}
+    \begin{itemize}
+        \item \textbf{Longitudinal Studies:} More long-term studies are required to assess the lasting impact of VR on empathy.
+        \item \textbf{Cultural Sensitivity:} Research should consider how VR experiences are received by different cultural groups and how personal biases affect empathy responses.
+    \end{itemize}
+    \item \textbf{Design Considerations:}
+    \begin{itemize}
+        \item VR experiences should not just focus on immersion and empathy but also integrate critical thinking and reflection about the social issues depicted.
+        \item Storytelling elements and interactive designs should be carefully crafted to encourage meaningful engagement and empathy.
+    \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Conclusion}
+\begin{itemize}
+    \item \textbf{VR’s Potential vs. Reality:}
+    \begin{itemize}
+        \item While VR has potential to foster empathy, it should not be viewed as a "magic bullet" for social change.
+        \item There is insufficient evidence to claim VR as an inherently superior medium for empathy compared to traditional media.
+    \end{itemize}
+    \item \textbf{Call for More Research:}
+    \begin{itemize}
+        \item Future studies must rigorously evaluate the long-term effects of VR and develop ethical frameworks for its use in social and humanitarian contexts.
+    \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Questions}
+\begin{itemize}
+    \item Thank you for your attention!  
+    \item Feel free to ask any questions.
+\end{itemize}
+\end{frame}
+
+\end{document}
 \end{document}
 
 % %------------------------------------------------
