初版（正在做

--- a/reference.bib
+++ b/reference.bib
@@ -7,3 +7,24 @@
   number  = {3},
   pages   = {45--678}
 }
+
+@article{schrier2021systematic,
+  title     = {A systematic literature review of ‘empathy’and ‘games’},
+  author    = {Schrier, Karen and Farber, Matthew},
+  journal   = {Journal of Gaming \& Virtual Worlds},
+  volume    = {13},
+  number    = {2},
+  pages     = {195--214},
+  year      = {2021},
+  publisher = {Intellect}
+}
+
+@article{kleinsmith2015understanding,
+  title     = {Understanding empathy training with virtual patients},
+  author    = {Kleinsmith, Andrea and Rivera-Gutierrez, Diego and Finney, Glen and Cendan, Juan and Lok, Benjamin},
+  journal   = {Computers in human behavior},
+  volume    = {52},
+  pages     = {151--158},
+  year      = {2015},
+  publisher = {Elsevier}
+}
