--- a/sample.tex
+++ b/sample.tex
@@ -4,11 +4,11 @@
 
 \documentclass[aspectratio=169,xcolor=dvipsnames]{beamer}
 \usetheme{SimpleDarkBlue}
-
 \usepackage{hyperref}
 \usepackage{graphicx} % Allows including images
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
-
+\usepackage{natbib}
+\setbeamertemplate{bibliography item}[text]
 %----------------------------------------------------------------------------------------
 %    TITLE PAGE
 %----------------------------------------------------------------------------------------
@@ -41,7 +41,114 @@
 
 % Third Teammate
 \section{Applications}
+\begin{frame}{Applications}
+    \begin{center}
+        \Large{Applications of Empathy in VR}\\
+        \vspace{0.5cm}
+        \normalsize{Jinxian Zhu}
+    \end{center}
+\end{frame}
 
+\begin{frame}{Applications}
+    \begin{columns}[c]    
+        \column{0.5\textwidth}
+        \begin{center}
+            \textbf{\large Professional Training} \\
+            \vspace{0.1cm}
+            \includegraphics[height=2.8cm]{Pre.-Empathy-in-VR/section3_picture/doctortraining.jpg} \\
+            \vspace{0.1cm}
+            \begin{minipage}{0.95\textwidth}
+                \centering\small
+                Enhancing empathy skills of healthcare providers, teachers, and other professionals to improve service quality
+            \end{minipage}
+        \end{center}
+        
+        \column{0.5\textwidth}
+        \begin{center}
+            \textbf{\large Educational Applications} \\
+            \vspace{0.1cm}
+            \includegraphics[height=2.8cm]{Pre.-Empathy-in-VR/section3_picture/childrenempathy1.jpg} \\
+            \vspace{0.1cm}
+            \begin{minipage}{0.95\textwidth}
+                \centering\small
+                Empathy education for children and the public, promoting social inclusion and diverse understanding
+            \end{minipage}
+        \end{center}
+    \end{columns}
+    
+    \begin{block}{Application Progress}
+        VR empathy applications are transitioning from proof of concept to practical implementation, primarily advancing empathy development through professional training and public education.
+\end{block}
+\end{frame}
+
+\begin{frame}{VR Empathy in Professional Training: Overview}
+    \begin{columns}[T]
+        \begin{column}{0.45\textwidth}
+            \vbox to 6cm{
+                \vfill
+                \centering
+                \includegraphics[height=6cm]{Pre.-Empathy-in-VR/section3_picture/medical_training.jpg}
+                \vfill
+            }
+        \end{column}
+        
+        \begin{column}{0.55\textwidth}
+            \vbox to 6cm{
+                \vfill
+                \begin{block}{Progress of VR Empathy Applications in Professional Training}
+                    VR empathy training is transforming professional development by providing immersive perspective-taking experiences that traditional methods cannot replicate.
+                    
+                    Studies demonstrate VR empathy training produces significant improvements in professional performance metrics and client satisfaction compared to traditional methods.
+                \end{block}
+                \vfill
+            }
+        \end{column}
+    \end{columns}
+\end{frame}
+
+
+
+\begin{frame}{Training Objectives \& Theoretical Foundation}
+    
+    \begin{columns}[c]
+        \column{0.5\textwidth}
+        \begin{block}{Key Training Objectives}
+            \begin{itemize}
+                \item Enhance empathic understanding across professional contexts
+                \item Develop advanced communication skills for diverse client interactions
+                \item Cultivate professional sensitivity to client experiences
+                \item Bridge theory-practice gap through immersive learning
+            \end{itemize}
+        \end{block}
+        
+        \column{0.5\textwidth}
+        \begin{block}{Theoretical Foundation}
+            \begin{itemize}
+                \item Perspective-taking theory: Understanding others' viewpoints
+                \item Embodied cognition: VR facilitates "being in another's shoes"
+                \item Emotional contagion: Shared affective experiences
+                \item Social presence theory: Immersion enhances empathic response
+            \end{itemize}
+        \end{block}
+    \end{columns}
+    
+    \begin{alertblock}{Empathy in Professional Settings}
+        VR creates unique opportunities for professionals to experience client perspectives firsthand, transforming abstract empathy concepts into embodied understanding that traditional training cannot achieve.
+    \end{alertblock}
+\end{frame}
+
+
+\begin{frame}{Applications}
+\end{frame}
+
+\begin{frame}{Applications}
+\end{frame}
+
+\begin{frame}{Applications}
+\end{frame}
+
+\begin{frame}{Applications}
+\end{frame}
 % Fourth Teammate
 \section{Evaluation}
 
