--- a/reference.bib
+++ b/reference.bib
@@ -28,3 +28,46 @@
   year      = {2015},
   publisher = {Elsevier}
 }
+
+
+@article{garcia2016virtual,
+  title     = {Virtual empathy as digital competence in education 3.0},
+  author    = {Garc{\'\i}a-P{\'e}rez, Rafael and Santos-Delgado, Juan-Manuel and Buz{\'o}n-Garc{\'\i}a, Olga},
+  journal   = {International Journal of Educational Technology in Higher Education},
+  volume    = {13},
+  pages     = {1--10},
+  year      = {2016},
+  publisher = {Springer}
+}
+
+@article{barney2012disability,
+  title     = {Disability simulations: Using the social model of disability to update an experiential educational practice},
+  author    = {Barney, Keith W},
+  journal   = {SCHOLE: A Journal of Leisure Studies and Recreation Education},
+  volume    = {27},
+  number    = {1},
+  pages     = {1--11},
+  year      = {2012},
+  publisher = {Taylor \& Francis}
+}
+
+@article{muravevskaia2023designing,
+  title     = {Designing a Virtual Reality Empathy Game framework to create empathic experiences for children},
+  author    = {Muravevskaia, Ekaterina and Gardner-McCune, Christina},
+  journal   = {International Journal of Child-Computer Interaction},
+  volume    = {35},
+  pages     = {100561},
+  year      = {2023},
+  publisher = {Elsevier}
+}
+
+@article{zwolinski2023enhancing,
+  title     = {Enhancing empathy through virtual reality: Developing a universal design training application for students},
+  author    = {Zwoli{\'n}ski, Grzegorz and Kami{\'n}ska, Dorota and Haamer, Rain E and Pinto-Coelho, Luis and Anbarjafari, Gholamreza},
+  journal   = {Medycyna Pracy},
+  volume    = {74},
+  number    = {3},
+  pages     = {199--210},
+  year      = {2023},
+  publisher = {Instytut Medycyny Pracy im. prof. dra Jerzego Nofera w {\L}odzi}
+}
