--- a/reference.bib
+++ b/reference.bib
@@ -7,3 +7,19 @@
   number  = {3},
   pages   = {45--678}
 }
+@article{lee2024measurement,
+  title={Measurement of Empathy in Virtual Reality with Head-Mounted Displays: A Systematic Review},
+  author={Lee, Yongho and Shin, Heesook and Gil, Youn-Hee},
+  journal={IEEE Transactions on Visualization and Computer Graphics},
+  volume={30},
+  number={5},
+  pages={2485--2495},
+  year={2024},
+  publisher={IEEE}
+}
+@article{paananen2022digital,
+  title={From digital media to empathic reality: A systematic review of empathy research in extended reality environments},
+  author={Paananen, Ville and Kiarostami, Mohammad Sina and Lee, Lik-Hang and Braud, Tristan and Hosio, Simo},
+  journal={arXiv preprint arXiv:2203.01375},
+  year={2022}
+}
